--- a/index.css
+++ b/index.css
@@ -17,7 +17,7 @@
      }
      img{
         border-radius: 10px;
-         width:270px;
+         width: 100%;
      }
      .body{
         background-color:  hsl(0, 0%, 100%);
@@ -26,6 +26,8 @@
         border-radius: 20px;
         box-sizing: border-box;
         margin-bottom: 20px;
+        margin-top: 12vh;
+        box-shadow: 0px 0px 15px 2px rgba(0,0,0,0.1);
      }
      .big{
         font-weight: 700;
